# hotkey-listener

./: Cargo.toml  LICENSE  README.md
src/: event.rs  hotkey.rs  key.rs  lib.rs  linux.rs  listener.rs  macos.rs
